# au-summer-2013

./: .gitignore  .travis.yml  README.md  requirements.txt
data/germline/human/: VL.fasta
lib/: CMakeLists.txt
lib/blast/: ConstructFilter.py  ExpandNames.py  GetGIbyNames.py  GetGIbyTaxID.py  GetOidbyGI.py  Make_fitered_gi_taxid_by_taxid.py  QueryToBLAST.py  QueryToBlast_readme.txt  README.md  ResultParsing.py  UpdatingFilter.py  UseFilter.py  test local blast.py  Таксоны с описанием  названия типов антител.txt
lib/dataproc/: README.md  alignment.py  analysis.py  clustering.py  config.json  main.py  requirement.txt  separate.py
lib/dataproc/analitics_tool/: README.md  analysis.py  requirement.txt
lib/dataproc/clustering_tool/: cl_to_fasta.py  clustering.py  main.py  plots.py  region_finding.py  separate.py
lib/dataproc/correction_tool/: alignment.py  config.json  separate.py
lib/regions/: README.md  draft.py  regionsSvm.py
lib/regions/LearningSequenceMarkup/: markup.py
lib/regions/src/: README.txt  example.sh  run.sh
lib/regions/src/regions/: .cproject  compile.sh
lib/regions/src/regions/src/: CMakeLists.txt  main.cpp
lib/regions/src/regions/src/algorithm/: CMakeLists.txt
lib/regions/src/regions/src/config/: config.ini
lib/regions/src/regions/src/data_structures/: CMakeLists.txt  database.cpp
lib/regions/src/regions/src/io/: CMakeLists.txt  fasta_reader.cpp  output_formatter.cpp
lib/regions/src/regions/src/misc/: CMakeLists.txt  config_reader.cpp  generic_exception.cpp
lib/regions/src/regions/src/tasks/: CMakeLists.txt  regions_finder.cpp  task_configurator.cpp
lib/regions/src/regions/src/tests/: CMakeLists.txt  tests.cpp
lib/regions/src/regions/src/utils/: CMakeLists.txt  reverse_complement.cpp
lib/regions/src/regions_assembler/: compile.sh
lib/regions/src/regions_assembler/src/: CMakeLists.txt  main.cpp
lib/regions/src/regions_assembler/src/tests/: CMakeLists.txt  tests.cpp
lib/regions/svm/: RegionsClassifier.py  SimpleSvmResultFilter.py  SvmTools.py  Usage.py  __init__.py  classifierVH.dmp  classifierVK.dmp  classifierVL.dmp  regions_classifier.py  svm_tools.py  type_classifier.py
lib/representation/: aminocolors.py  represent_latex.py
lib/share/: README.md  figa_tools.py
lib/share/zlib-1.2.8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
lib/share/zlib-1.2.8/Release/: zlib.exp  zlib.lib  zlibstatic.lib
lib/share/zlib-1.2.8/example.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+3 more)
lib/storage/: CMakeLists.txt  README.md  alicont.py  build.bat  main.cpp
lib/storage/cheese/: FASTA_reader.h  cheese-trie.h  cheese-trie_unittest.cpp  trie.h  trie_topology.h
lib/storage/common/: fasta_reader.h
lib/storage/common/include/: read.h  scorematrix.h
lib/storage/common/sources/: fasta_reader.cpp
lib/storage/doc/: Ig alignments.html
lib/storage/include/: annotation.hpp  annotation_node.hpp  annotation_record.hpp  contig.hpp  kstat.hpp  traits.hpp  trie.hpp  trie_topology.hpp
lib/storage/include/Algorithm/: algorithm.hpp
lib/storage/include/Annotation/: annotation.hpp  annotation_node.hpp  annotation_record.hpp
lib/storage/include/Kstat/: kstat.hpp
lib/storage/include/Storage/: storage.hpp
lib/storage/include/Trie/: trie.hpp  trie_topology.hpp
lib/storage/include/algorithm/: algorithm.hpp
lib/storage/include/annotation/: annotation.hpp  annotation_node.hpp  annotation_record.hpp
lib/storage/include/kstat/: kstat.hpp
lib/storage/include/storage/: storage.hpp
lib/storage/include/trie/: trie.hpp  trie_node.hpp  trie_topology.hpp
lib/storage/paul_full_implementation/: Makefile  main.cpp
lib/storage/paul_full_implementation/contig/: algorithm.hpp  contig.hpp  contig_iterator.hpp  test.cpp  unit_tests.h
lib/storage/paul_full_implementation/contig/annotation/: a.out  annotation.hpp  annotation_node.hpp  annotation_record.hpp  test.cpp
lib/storage/paul_full_implementation/contig/kstat/: kstat.hpp  test.cpp
lib/storage/paul_full_implementation/contig/trie/: test.cpp  trie.hpp  trie_cont.hpp  trie_impl.hpp  trie_iterator.hpp  trie_node.hpp
lib/storage/paul_impl/: CMakeLists.txt  algorithm.hpp  contig.hpp  contig.pro  main.cpp  unittest.h
lib/storage/paul_impl/annotation/: annotation.hpp  annotation_record.hpp
lib/storage/paul_impl/contig/: algorithm.hpp  contig.hpp
lib/storage/paul_impl/contig/alicont/: alicont.hpp  alimatrix.hpp
lib/storage/paul_impl/contig/aligner/: algorithm.hpp  container.hpp  matrix.hpp
lib/storage/paul_impl/contig/annotation/: annotation.hpp  annotation_node.hpp  annotation_record.hpp
lib/storage/paul_impl/contig/kstat/: kstat.hpp
lib/storage/paul_impl/contig/trie/: trie.hpp  trie_const_iterator.hpp  trie_cont.hpp  trie_impl.hpp  trie_iterator.hpp  trie_node.hpp
lib/storage/paul_impl/kstat/: kstat.hpp
lib/storage/paul_impl/tests/: alicont_test.cpp  aligner_test.cpp  annotation_test.cpp  contig_test.cpp  fasta_test.cpp  kstat_test.cpp  proess_test.cpp  test.cpp  trie_test.cpp
lib/storage/paul_impl/trie/: trie.hpp  trie_const_iterator.hpp  trie_impl.hpp
lib/storage/paul_impl/utils/: read.h
lib/storage/pymodel/: gene.py  kstat.py  property.py  test.py  test_this_shit.py  trie.py
lib/storage/tests/: insert_find_unittest.cpp  unittest.cpp
lib/storage/tests/include/: unittest.h
lib/storage/tests/sources/: align_unittest.cpp  annotation_unittest.cpp  find_unitttest.cpp  kstat_unittest.cpp  matrix_unittest.cpp  storage_unittest.cpp  trie_topology_unittest.cpp  trie_unittest.cpp
lib/storage/trie/: trie.hpp
lib/storage/trie_version/: main.cpp  trie.hpp  trie_cont.hpp  trie_impl.hpp  trie_iterator.hpp  trie_node.hpp
(+50 files in other folders)
